# qcagent

./: .gitignore  README.md  TEST_RUN_GUIDE.md  cardiovascular.yaml  colab_run.ipynb  colab_setup.py  endpoints.py  evidence.py  harness.py  index_date.py  loader.py  model_client.py  parse_protocol.py  protocol_run.py  pyproject.toml  requirements.txt  rows.py  rules.py  search.py  setup_cuda_env.sh  setup_vllm.py
protocol_spec_assist/: __init__.py
protocol_spec_assist/concepts/: base.py  biomarkers.py  clinical_characteristics.py  cohort_definitions.py  demographics.py  eligibility.py  endpoints.py  evidence_auditor.py  evidence_merger.py  index_date.py  lab_variables.py  source_data_prep.py  study_design.py  treatment_variables.py
protocol_spec_assist/data_sources/: registry.py
protocol_spec_assist/eval/: harness.py
protocol_spec_assist/ingest/: parse_protocol.py
protocol_spec_assist/qc/: rules.py
protocol_spec_assist/retrieval/: search.py
protocol_spec_assist/row_completion/: __init__.py  base.py  data_prep_writer.py  demographics_writer.py  outcomes_writer.py
protocol_spec_assist/schemas/: evidence.py
protocol_spec_assist/serving/: model_client.py
protocol_spec_assist/spec_output/: excel_writer.py  html_renderer.py  spec_schema.py
protocol_spec_assist/ta_packs/: cardiovascular.yaml  immunology.yaml  (+3 more)
tests/: test_chunk_id.py  test_data_source_registry.py  test_evidence_pack.py  test_p1_features.py  test_qc_rules.py  test_review_p0_fixes.py  test_sliding_window.py  test_spec_output.py  test_ta_loader.py  test_table_to_text.py  test_v02_fixes.py
(+1 files in other folders)
