[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-spec-assist"
version = "0.2.0"
description = "AI-assisted protocol to programming spec authoring tool"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "docling>=2.0",
    "pymupdf>=1.23",
    "FlagEmbedding>=1.2",
    "qdrant-client>=1.7",
    "openai>=1.12",
    "prefect>=2.16",
    "openpyxl>=3.1",
    "streamlit>=1.32",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["protocol_spec_assist*"]

[tool.setuptools.package-data]
"protocol_spec_assist.ta_packs" = ["*.yaml"]
